re-enable previously unplugged modules
